--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,10 +14,11 @@ name = "mk20d7"
 path = "./src/lib.rs"
 
 [build-dependencies]
+quote = "0.3.15"
+rustfmt-nightly = "0.6.0"
 # Use once `svd2rust@>0.12.0` is published
 # svd2rust = "*"
 svd2rust = { git = "https://github.com/japaric/svd2rust" }
-quote = "0.3.15"
 
 [dependencies]
 bare-metal = "0.1.0"
